hphp/hack/test/typecheck/nonsense_member_access.php.exp
File "nonsense_member_access.php", line 5, characters 5-16:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 5, characters 5-16:
  Expected `dynamic`
  File "nonsense_member_access.php", line 5, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 6, characters 5-16:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 6, characters 5-16:
  Expected `dynamic`
  File "nonsense_member_access.php", line 6, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 7, characters 5-16:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 7, characters 5-16:
  Expected `dynamic`
  File "nonsense_member_access.php", line 7, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 8, characters 5-13:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 8, characters 5-13:
  Expected `dynamic`
  File "nonsense_member_access.php", line 8, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 9, characters 5-13:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 9, characters 5-13:
  Expected `dynamic`
  File "nonsense_member_access.php", line 9, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 10, characters 5-13:
Dynamic access of property (Typing[4110])
  File "nonsense_member_access.php", line 10, characters 5-13:
  Expected `dynamic`
  File "nonsense_member_access.php", line 10, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
File "nonsense_member_access.php", line 5, characters 12-16:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 6, characters 12-16:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 7, characters 12-16:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 8, characters 12-13:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
File "nonsense_member_access.php", line 9, characters 12-13:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
File "nonsense_member_access.php", line 10, characters 12-13:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
File "nonsense_member_access.php", line 13, characters 9-13:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 14, characters 9-13:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 15, characters 9-13:
Dynamic member access requires a local variable, not `$this`. (Typing[4406])
File "nonsense_member_access.php", line 16, characters 9-10:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
File "nonsense_member_access.php", line 17, characters 9-10:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
File "nonsense_member_access.php", line 18, characters 9-10:
Dynamic member access requires a local variable, not `$_`. (Typing[4406])
